[gd_scene load_steps=2 format=3 uid="uid://d0nrbmkjcp050"]

[ext_resource type="Script" path="res://source/client/gateway/gateway_ui/components/world_selection/world_button/world_button.gd" id="1_u55bs"]

[node name="WorldButton" type="Button"]
custom_minimum_size = Vector2(150, 250)
toggle_mode = true
script = ExtResource("1_u55bs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 150.0
offset_bottom = 250.0

[node name="ServerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sladida"
horizontal_alignment = 1

[node name="ServerRules" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Rules:
None"
horizontal_alignment = 1

[node name="ServerLocation" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "International"
horizontal_alignment = 1
